--- a/hitroupe-backend/src/main/resources/application.properties
+++ b/hitroupe-backend/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+spring.database.driverClassName=org.postgresql.Driver
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/hitroupe
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.datasource.validationQuery=SELECT 1
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto=update
+# Naming strategy
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+# Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
